Add build file for jInstagram-master, add jInstagram-master to root project, change tracking-service build file to use local jInstagram-master

--- a/tracking-service/build.gradle
+++ b/tracking-service/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
       compile project(':link-data')
-      compile 'com.sachinhandiekar:jInstagram:1.1.5'
+      compile project(':jInstagram-master')
    }
