Import Scribe lib
imported scribe lib source files directly into the project, since jar version doesn't contain needed abstract classes
imported ning async http client via gradle dependencies, since scribe uses classes from it

--- a/tracking-service/build.gradle
+++ b/tracking-service/build.gradle
@@ -1,4 +1,9 @@
+repositories {
+    mavenCentral()
+}
+
 dependencies {
+	  compile 'com.ning:async-http-client:1.9.31'
       compile project(':link-data')
       compile project(':jInstagram-master')
    }
