Moving the model from link-data, database to system-model, Add implementation for link-data reciever, Add services for profiles, locations, feeds, hashtags, comments and media, Add service for streams provider.

--- a/database/build.gradle
+++ b/database/build.gradle
@@ -2,5 +2,5 @@ dependencies {
     // Cassandra
     compile 'com.datastax.cassandra:cassandra-driver-core:3.0.0-beta1'
     compile 'com.datastax.cassandra:cassandra-driver-mapping:3.0.0-beta1'
-
+	compile project(':system-model')
 }
