--- a/tracking-service/build.gradle
+++ b/tracking-service/build.gradle
@@ -5,5 +5,6 @@ repositories {
 dependencies {
 	  compile 'com.ning:async-http-client:1.9.31'
 	  compile 'com.cedarsoftware:json-io:4.3.0'
+	  compile 'org.glassfish:javax.json:1.0.4'
       compile project(':link-data')
    }
